--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -5,7 +5,7 @@
     // content를 1280px로 만들기 위함
     padding: 0 $p-mobile;
     margin: 0 auto;
-    @include tablet {
+    @include tabletMore {
         padding: 0 $p-tablet;
     }
 }
@@ -209,7 +209,6 @@
     margin-left: 1vw;
     @include tabletMore {
         width: 180px;
-        gap: 10%;
     }
 
     .lang {
@@ -335,6 +334,7 @@
     transform: translate(-50%, -50%);
     font-weight: bold;
     text-align: center;
+    white-space: nowrap;
     .main-visual__tit {
         font-size: 5rem;
         @include tabletMore {
