--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -205,7 +205,7 @@
 // util
 .util {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     margin-left: 1vw;
     @include tabletMore {
         width: 180px;
