--- a/resources/scss/component/_font.scss
+++ b/resources/scss/component/_font.scss
@@ -4,3 +4,6 @@
     font-weight: normal;
     font-style: normal;
 }
+
+//            font-family: "Montserrat", sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
