--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -109,10 +109,11 @@
             height: 90px;
             padding: 0 1vw;
             font-size: 1.6rem;
-            font-weight: 500;
+            font-weight: 600;
             color: $gray-90;
             &:hover {
-                font-weight: bold;
+                color: $primary-40;
+                transition: 0.4s;
             }
         }
     }
