--- a/resources/css/output/style.css
+++ b/resources/css/output/style.css
@@ -4149,7 +4149,7 @@ input[type=checkbox] {
   gap: 10px;
   position: absolute;
   top: 3%;
-  left: 130px;
+  left: 15%;
   font-size: 1.2rem;
   color: #555555;
 }
