--- a/resources/scss/pattern/_p_content.scss
+++ b/resources/scss/pattern/_p_content.scss
@@ -323,7 +323,7 @@
         gap: 10px;
         position: absolute;
         top: 3%;
-        left: 130px;
+        left: 15%;
         font-size: 1.2rem;
         color: $gray-70;
         @include mobileMore {
