--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -53,7 +53,7 @@
 
 // header
 #header {
-    background-color: $white;
+    // background-color: $white;
     z-index: 100;
     position: fixed;
     top: 0;
@@ -112,7 +112,7 @@
             font-weight: 600;
             color: $gray-90;
             &:hover {
-                color: $primary-40;
+                color: rgb(255, 103, 153);
                 transition: 0.4s;
             }
         }
@@ -287,9 +287,11 @@
 
 // main_visual
 .main-visual {
+    background-color: rgba(255, 246, 251, 0.8);
     position: relative;
     height: 100%;
     z-index: -1;
+
     .main-visual__txtBox {
         color: $black;
     }
@@ -495,7 +497,7 @@
     .brand__tit {
         margin-top: 15px;
         pre {
-            margin: 15px 0 0 0;
+            margin: 10px 0 0 0;
         }
     }
     .brand-product__wrap {
