--- a/resources/scss/pattern/_p_content.scss
+++ b/resources/scss/pattern/_p_content.scss
@@ -197,8 +197,12 @@
         pre {
             font-size: 1.2rem;
             font-weight: 300;
-            @include mobileMore {
+            @include tablet {
                 font-size: 1.7rem;
+            }
+            @include tabletMore {
+                font-size: 2.7rem;
+                font-weight: 400;
             }
         }
         .brand__more {
@@ -214,6 +218,9 @@
         }
     }
     text-align: center;
+    @include tabletMore {
+        text-align: left;
+    }
     .brand-product__cont {
         box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
 
