--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -349,8 +349,9 @@
         @include tabletMore {
             font-size: 12vw;
             img {
-                width: 12vw;
-                padding-bottom: 1.5%;
+                width: 9vw;
+                padding-bottom: 30px;
+                padding-right: 5px;
             }
         }
         @include tabletLess {
