--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -350,15 +350,16 @@
             font-size: 12vw;
             img {
                 width: 9vw;
-                padding-bottom: 30px;
+                padding-top: 2vw;
                 padding-right: 5px;
             }
         }
         @include tabletLess {
             font-size: 20vw;
             img {
-                width: 20vw;
-                padding-bottom: 1.5%;
+                width: 18vw;
+                padding-top: 2vw;
+                padding-right: 5px;
             }
         }
     }
