--- a/resources/scss/pattern/_p_content.scss
+++ b/resources/scss/pattern/_p_content.scss
@@ -517,14 +517,14 @@
         width: 100%;
         @include tablet {
             width: 60%;
-            font-size: 1.3rem;
+            font-size: 1.2rem;
         }
         @include tabletMore {
             width: 40%;
             font-size: 1.4rem;
         }
         display: flex;
-        font-size: 1rem;
+        font-size: 0.9rem;
 
         justify-content: space-between;
     }
@@ -550,8 +550,15 @@
     }
     .footer_info {
         font-size: 1rem;
+        @include mobile {
+            font-size: 0.8rem;
+        }
         // text-align: right;
         .footer_info__copyright {
+            @include mobile {
+                font-size: 0.7rem;
+            }
+            white-space: nowrap;
             padding-top: 10px;
             color: $gray-50;
         }
