--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -299,6 +299,11 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            .flower {
+                img {
+                    vertical-align: middle;
+                }
+            }
         }
     }
     .main-visual__circle {
@@ -346,11 +351,11 @@
     white-space: nowrap;
     .main-visual__tit {
         font-size: 5rem;
+
         @include tabletMore {
             font-size: 12vw;
             img {
                 width: 10vw;
-                padding-top: 3vw;
                 padding-right: 5px;
             }
         }
@@ -358,7 +363,6 @@
             font-size: 20vw;
             img {
                 width: 16vw;
-                padding-top: 5.5vw;
                 padding-right: 5px;
             }
         }
