--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -350,8 +350,6 @@
     text-align: center;
     white-space: nowrap;
     .main-visual__tit {
-        font-size: 5rem;
-
         @include tabletMore {
             font-size: 12vw;
             img {
@@ -360,12 +358,21 @@
                 padding-bottom: 2vw;
             }
         }
-        @include tabletLess {
+
+        @include tablet {
+            font-size: 15vw;
+            img {
+                width: 13vw;
+                padding-bottom: 2.5vw;
+            }
+        }
+
+        @include mobile {
             font-size: 20vw;
             img {
                 width: 17vw;
                 padding-right: 5px;
-                padding-bottom: 2vw;
+                padding-bottom: 3vw;
             }
         }
     }
@@ -374,7 +381,12 @@
         @include tabletMore {
             font-size: 1.3vw;
         }
-        @include tabletLess {
+
+        @include tablet {
+            font-size: 1.8vw;
+        }
+
+        @include mobile {
             font-size: 2.2vw;
         }
     }
