sub2 헤더만 넣음 / nav-all ani구현 필요

--- a/pages/layout/footer.html
+++ b/pages/layout/footer.html
@@ -29,8 +29,8 @@
     </div>
     <div class="footer__wrap">
         <div class="footer_sns">
-            <a href="#">INSTAGRAM</a>
-            <a href="#">YOUTUBE</a>
+            <a href="https://www.instagram.com/pigeon_official_kr/" target="_blank">INSTAGRAM</a>
+            <a href="https://www.youtube.com/@pigeon3570" target="_blank">YOUTUBE</a>
         </div>
         <div class="footer_info">
             <div class="footer_info__txt">
