--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -548,10 +548,9 @@
         flex-wrap: wrap;
         align-content: center;
         justify-content: center;
-        gap: 10px;
         @include tabletMore {
             height: 100vh;
-            width: 40%;
+            width: 55%;
             overflow: hidden;
             display: flex;
             flex-wrap: wrap;
@@ -597,10 +596,15 @@
             height: 200px;
             border-radius: 30px;
             background-color: $white;
+            transition: 0.6s ease-in-out;
             @include tabletMore {
-                width: 170px;
-                max-width: 200px;
-                height: 220px;
+                width: 200px;
+                height: 240px;
+                &:hover {
+                    width: 220px;
+                    height: 250px;
+                    background-color: rgba($primary-10, $alpha: 0.7);
+                }
             }
         }
     }
@@ -637,6 +641,15 @@
     .sec-news {
         width: 100%;
         height: 100%;
+    }
+
+    .sec-g__title {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 10px;
     }
     .sec-contact {
         width: 100%;
