--- a/resources/scss/pattern/_p_layout.scss
+++ b/resources/scss/pattern/_p_layout.scss
@@ -654,6 +654,9 @@
     .sec-contact {
         width: 100%;
         height: 100%;
+        .sec__tit {
+            margin-bottom: 10px;
+        }
         .sec__map {
             width: 100vw;
             height: 300px;
