--- a/resources/css/output/style.css
+++ b/resources/css/output/style.css
@@ -5,6 +5,7 @@
 /* **** form mixin ****/
 @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
 html,
 body {
   position: relative;
@@ -3168,6 +3169,35 @@ input[type=checkbox] {
 .is-error .form-select {
   border-color: var(--krds-point);
   border-width: 2px;
+}
+
+.header2 {
+  background-color: #fff;
+  margin-bottom: 60px;
+}
+
+.intro {
+  width: 100%;
+  height: 300px;
+  background: #555;
+}
+
+.qucik-nav {
+  width: 100%;
+  height: 50px;
+  background-color: #333;
+}
+
+.brand-person {
+  width: 100%;
+  height: 800px;
+  background: #777;
+}
+
+.promise {
+  width: 100%;
+  height: 300px;
+  background: #222;
 }
 
 .inner {
