--- a/resources/css/output/style.css
+++ b/resources/css/output/style.css
@@ -1,17 +1,17 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
 /* **** area mixin ****/
 /* **** text attr ****/
 /* **** scroll ****/
 /* **** form mixin ****/
-@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
 html,
 body {
   position: relative;
   width: 100%;
   height: 100%;
-  font-family: "Pretendard GOV", sans-serif;
+  font-family: "Noto Sans KR", serif;
   color: var(--krds-gray-90);
   font-weight: 400;
   line-height: 1.5;
@@ -3173,13 +3173,40 @@ input[type=checkbox] {
 
 .header2 {
   background-color: #fff;
-  margin-bottom: 60px;
 }
 
 .intro {
   width: 100%;
-  height: 300px;
-  background: #555;
+  height: 460px;
+  background: #f2f2f2;
+}
+.intro .intro__inner {
+  margin-top: 60px;
+  width: 100%;
+  height: 460px;
+  position: relative;
+  overflow: hidden;
+}
+.intro .intro__inner .intro__tit {
+  white-space: nowrap;
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translate(0, -50%);
+  display: flex;
+  flex-direction: column;
+}
+.intro .intro__inner .intro__tit p {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+.intro .intro__inner img {
+  position: absolute;
+  bottom: -10%;
+  right: -10%;
+  width: 250px;
+  height: 220px;
+  opacity: 0.8;
 }
 
 .qucik-nav {
@@ -3198,6 +3225,18 @@ input[type=checkbox] {
   width: 100%;
   height: 300px;
   background: #222;
+}
+
+.brands__prod {
+  width: 100%;
+  height: 1000px;
+  background: #666;
+}
+
+.Philosophy {
+  width: 100%;
+  height: 600px;
+  background: #888;
 }
 
 .inner {
@@ -3338,7 +3377,7 @@ input[type=checkbox] {
   display: block;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 246, 251, 0.6);
+  background-color: rgba(242, 242, 242, 0.6);
   position: fixed;
   top: 0;
   left: 0;
