--- a/resources/scss/pattern/_p_layout2.scss
+++ b/resources/scss/pattern/_p_layout2.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Dots:wght@400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+KR:wght@100..900&display=swap");
-
 .header2 {
     background-color: $white;
 }
@@ -42,8 +40,87 @@
 
 .qucik-nav {
     width: 100%;
-    height: 50px;
-    background-color: #333;
+    height: 40px;
+    background-color: $white;
+    display: flex;
+    > div {
+        border: 0.5px solid #ccc;
+    }
+    .quick-nav__home {
+        width: 10%;
+        position: relative;
+        button {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            span {
+                @include sr-only;
+            }
+            &::after {
+                @include lineAwesome;
+                content: "\f015";
+                font-weight: 900;
+                font-size: 2.5rem;
+                color: $secondary;
+            }
+        }
+    }
+    .quick-nav__dep1 {
+        width: 45%;
+        h3 {
+            padding: 0 20px;
+            line-height: 40px;
+            vertical-align: middle;
+            font-size: 1.2rem;
+            font-weight: 500;
+        }
+    }
+    .quick-nav__dep2 {
+        width: 45%;
+        font-size: 1.2rem;
+        font-weight: 500;
+
+        .dep2-btn {
+            width: 100%;
+            text-align: left;
+            height: 40px;
+            display: flex;
+            padding: 0 20px;
+            align-items: center;
+            justify-content: space-between;
+            .dep2-dropbtn {
+                span {
+                    @include sr-only;
+                }
+                &::after {
+                    @include lineAwesome;
+                    content: "\f106";
+                    font-size: 1.6rem;
+                    color: $gray-70;
+                    transition: transform 0.5s ease;
+                }
+                &.active {
+                    transform: rotate(180deg);
+                }
+            }
+        }
+
+        .dep2-lst {
+            display: none;
+            .dep2-brand {
+                border-bottom: 0.5px solid $gray-30;
+                a {
+                    padding: 0 20px;
+                    display: block;
+                    width: 100%;
+                    line-height: 40px;
+                    text-align: left;
+                    background-color: $white;
+                }
+            }
+        }
+    }
 }
 
 .brand-person {
