--- a/resources/css/output/style.css
+++ b/resources/css/output/style.css
@@ -3203,7 +3203,7 @@ input[type=checkbox] {
   position: absolute;
   bottom: -10%;
   right: -10%;
-  width: 250px;
+  width: 200px;
   height: 220px;
   opacity: 0.8;
 }
@@ -3294,6 +3294,8 @@ input[type=checkbox] {
 }
 .qucik-nav .quick-nav__dep2 .dep2-lst {
   display: none;
+  z-index: 100;
+  position: relative;
 }
 .qucik-nav .quick-nav__dep2 .dep2-lst .dep2-brand {
   border-bottom: 0.5px solid #d8d8d8;
@@ -3308,9 +3310,20 @@ input[type=checkbox] {
 }
 
 .brand-person {
+  padding-top: 15px;
   width: 100%;
-  height: 800px;
-  background: #777;
+  height: 100%;
+  background: #fff;
+}
+.brand-person .inner {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+.brand-person .inner img {
+  width: 150px;
+  height: auto;
 }
 
 .promise {
@@ -4030,6 +4043,53 @@ input[type=checkbox] {
   height: 100%;
   background-color: #1d1d1d;
   color: #fff;
+}
+
+.brand-person {
+  background: url("../../images/pattern/sub2/main_title01.png") no-repeat 0 0;
+  background-position: center;
+  position: relative;
+  isolation: isolate;
+}
+.brand-person::after {
+  content: "";
+  position: absolute;
+  background: white;
+  z-index: -1;
+  inset: 0;
+  opacity: 0.8;
+}
+.brand-person > * {
+  white-space: nowrap;
+}
+.brand-person .brand-tit {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: #1d1d1d;
+}
+.brand-person .brand-tit .tit-line::after {
+  content: "";
+  display: inline-block;
+  height: 1px;
+  width: 80px;
+  background: #717171;
+  vertical-align: middle;
+  margin: 0 5px;
+}
+.brand-person .brand-person__tit {
+  font-size: 1.6rem;
+  color: #1d1d1d;
+}
+.brand-person .brand-person__txt {
+  height: 100%;
+  font-size: 1.2rem;
+  font-weight: 300;
+  color: #717171;
+  text-align: center;
+  letter-spacing: -0.05rem;
+}
+.brand-person .brand-person__txt pre {
+  margin: 0;
 }
 
 .mySwiper2 .swiper-slide {
