--- a/resources/scss/pattern/_p_layout2.scss
+++ b/resources/scss/pattern/_p_layout2.scss
@@ -31,7 +31,7 @@
             position: absolute;
             bottom: -10%;
             right: -10%;
-            width: 250px;
+            width: 200px;
             height: 220px;
             opacity: 0.8;
         }
@@ -80,7 +80,6 @@
         width: 45%;
         font-size: 1.2rem;
         font-weight: 500;
-
         .dep2-btn {
             width: 100%;
             text-align: left;
@@ -108,6 +107,8 @@
 
         .dep2-lst {
             display: none;
+            z-index: 100;
+            position: relative;
             .dep2-brand {
                 border-bottom: 0.5px solid $gray-30;
                 a {
@@ -124,9 +125,20 @@
 }
 
 .brand-person {
+    padding-top: 15px;
     width: 100%;
-    height: 800px;
-    background: #777;
+    height: 100%;
+    background: $white;
+    .inner {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        img {
+            width: 150px;
+            height: auto;
+        }
+    }
 }
 
 .promise {
