--- a/resources/scss/pattern/_p_content.scss
+++ b/resources/scss/pattern/_p_content.scss
@@ -464,6 +464,7 @@
         width: 80%;
         height: 100%;
         font-size: 1rem;
+        white-space: nowrap;
         @include mobileMore {
             width: 60%;
             font-size: 1.5rem;
