--- a/resources/css/output/style.css
+++ b/resources/css/output/style.css
@@ -3329,7 +3329,6 @@ input[type=checkbox] {
 .promise {
   width: 100%;
   height: 300px;
-  background: #222;
 }
 
 .brands__prod {
@@ -4062,12 +4061,13 @@ input[type=checkbox] {
 .brand-person > * {
   white-space: nowrap;
 }
-.brand-person .brand-tit {
+
+.brand-tit {
   font-size: 1.2rem;
   font-weight: 400;
   color: #1d1d1d;
 }
-.brand-person .brand-tit .tit-line::after {
+.brand-tit .tit-line::after {
   content: "";
   display: inline-block;
   height: 1px;
@@ -4076,11 +4076,13 @@ input[type=checkbox] {
   vertical-align: middle;
   margin: 0 5px;
 }
-.brand-person .brand-person__tit {
+
+.brand-person__tit {
   font-size: 1.6rem;
   color: #1d1d1d;
 }
-.brand-person .brand-person__txt {
+
+.brand-person__txt {
   height: 100%;
   font-size: 1.2rem;
   font-weight: 300;
@@ -4088,7 +4090,7 @@ input[type=checkbox] {
   text-align: center;
   letter-spacing: -0.05rem;
 }
-.brand-person .brand-person__txt pre {
+.brand-person__txt pre {
   margin: 0;
 }
 
