--- a/resources/scss/pattern/_p_content2.scss
+++ b/resources/scss/pattern/_p_content2.scss
@@ -32,18 +32,21 @@
         margin: 0 5px;
     }
 }
-.brand-person__tit {
+.brand-subtit {
     font-size: 1.6rem;
     color: $gray-90;
 }
-.brand-person__txt {
-    height: 100%;
-    font-size: 1.2rem;
-    font-weight: 300;
-    color: $gray-60;
-    text-align: center;
-    letter-spacing: -0.05rem;
-    pre {
-        margin: 0;
+
+.brand-person {
+    .brand-person__con {
+        height: 100%;
+        font-size: 1.2rem;
+        font-weight: 300;
+        color: $gray-60;
+        text-align: center;
+        letter-spacing: -0.05rem;
+        pre {
+            margin: 0;
+        }
     }
 }
