--- a/resources/scss/pattern/_p_layout2.scss
+++ b/resources/scss/pattern/_p_layout2.scss
@@ -142,8 +142,14 @@
 }
 
 .promise {
+    .inner {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
+        text-align: center;
+    }
     width: 100%;
-    height: 300px;
 }
 
 .brands__prod {
